--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prepare": "husky install",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+		"test": "jest",
     "test:verbose": "jest --watch --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.ts",
     "test:integration": "npm test -- --watch -c jest-integration-config.ts",
@@ -25,14 +25,15 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "commitizen": "^4.2.5",
-    "eslint": "^7.32.0 || ^8.2.0",
+		"eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "ts-jest": "^29.0.3",
-    "tsconfig-paths": "^4.1.0"
+		"tsconfig-paths": "^4.1.0",
+		"typescript": "^4.8.4"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13"
