--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prepare": "husky install",
+		"migration:run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run --dataSource ./src/shared/infra/typeorm/index.ts",
 		"test": "jest",
     "test:verbose": "jest --watch --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.ts",
@@ -32,10 +33,13 @@
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "ts-jest": "^29.0.3",
+		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.8.4"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13"
+		"pg": "^8.8.0",
+		"reflect-metadata": "^0.1.13",
+		"typeorm": "^0.3.10"
   }
 }
