--- a/package.json
+++ b/package.json
@@ -1,50 +1,60 @@
 {
-  "name": "ngcash-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "prepare": "husky install",
-    "migration:run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run --dataSource ./src/shared/infra/typeorm/index.ts",
-    "test": "jest",
-    "test:verbose": "jest --watch --passWithNoTests --runInBand",
-    "test:unit": "npm test -- --watch -c jest-unit-config.ts",
-    "test:integration": "npm test -- --watch -c jest-integration-config.ts",
-    "test:staged": "jest -o",
-    "test:ci": "npm test -- --coverage",
-    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
-    "test:clear": "jest --clearCache"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^29.2.3",
-    "@types/joi": "^17.2.3",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "commitizen": "^4.2.5",
-    "eslint": "^8.27.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "jest-mock-extended": "^3.0.1",
-    "ts-jest": "^29.0.3",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "joi": "^17.7.0",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.10",
-    "yarn": "^1.22.19"
-  }
+    "name": "ngcash-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "prepare": "husky install",
+        "migration:run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run --dataSource ./src/shared/infra/typeorm/index.ts",
+        "dev": "nodemon --watch 'src/' --exec \"ts-node-dev -r tsconfig-paths/register src/config/server.ts\" -e ts",
+        "test": "jest",
+        "test:verbose": "jest --watch --passWithNoTests --runInBand",
+        "test:unit": "npm test -- --watch -c jest-unit-config.ts",
+        "test:integration": "npm test -- --watch -c jest-integration-config.ts",
+        "test:staged": "jest -o",
+        "test:ci": "npm test -- --coverage",
+        "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+        "test:clear": "jest --clearCache"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@commitlint/cli": "^17.2.0",
+        "@commitlint/config-conventional": "^17.2.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/dotenv-safe": "^8.1.2",
+        "@types/express": "^4.17.14",
+        "@types/jest": "^29.2.3",
+        "@types/joi": "^17.2.3",
+        "@types/node": "^18.11.9",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@typescript-eslint/parser": "^5.43.0",
+        "commitizen": "^4.2.5",
+        "eslint": "^8.27.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "husky": "^8.0.2",
+        "jest": "^29.3.1",
+        "jest-mock-extended": "^3.0.1",
+        "ts-jest": "^29.0.3",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.1.0",
+        "typescript": "^4.8.4"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv-safe": "^8.2.0",
+        "express": "^4.18.2",
+        "joi": "^17.7.0",
+        "pg": "^8.8.0",
+        "reflect-metadata": "^0.1.13",
+        "supertest": "^6.3.1",
+        "typeorm": "^0.3.10",
+        "yarn": "^1.22.19"
+    }
 }
