--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/express": "^4.17.14",
         "@types/jest": "^29.2.3",
         "@types/joi": "^17.2.3",
+				"@types/jsonwebtoken": "^8.5.9",
         "@types/node": "^18.11.9",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -51,10 +52,10 @@
         "dotenv-safe": "^8.2.0",
         "express": "^4.18.2",
         "joi": "^17.7.0",
+				"jsonwebtoken": "^8.5.1",
         "pg": "^8.8.0",
         "reflect-metadata": "^0.1.13",
         "supertest": "^6.3.1",
-        "typeorm": "^0.3.10",
-        "yarn": "^1.22.19"
+				"typeorm": "^0.3.10"
     }
 }
